--- a/upsell/index.html
+++ b/upsell/index.html
@@ -70,7 +70,7 @@
         E pra te ajudar a ter <strong>resultados ainda mais rápidos e deliciosos</strong>, preparamos uma oportunidade <strong>única e exclusiva</strong> — disponível apenas agora!
       </p>
 
-      <!-- NOVA FRASE DE DESTAQUE -->
+      <!-- Frase de destaque -->
       <h2 class="mt-8 text-2xl md:text-3xl font-extrabold text-amber-600 max-w-2xl mx-auto leading-snug">
         ✨ Receba agora <span class="text-emerald-600">200 receitas exclusivas</span> que vão te ajudar a alcançar seu objetivo mais rápido! 💪
       </h2>
@@ -87,70 +87,66 @@
     </div>
   </section>
 
-  <!-- Oferta -->
-  <section id="oferta" class="py-10">
-    <div class="container mx-auto px-4 grid lg:grid-cols-2 gap-8 items-center">
-      <div class="rounded-2xl overflow-hidden shadow-soft border border-slate-200 bg-white">
-        <img id="upsellImage" src="https://dietapronta.online/images/receitas.jpg"
-             alt="Receitas saudáveis" class="w-full h-72 object-cover"
-             onerror="this.src='https://images.unsplash.com/photo-1512058564366-18510be2db19?q=80&w=1200&auto=format&fit=crop';"/>
-        <div class="p-6">
-          <h2 class="text-2xl font-extrabold">200 Receitas Exclusivas 🍽️</h2>
-          <p class="mt-3 text-slate-700">
-            Receitas simples, práticas e deliciosas criadas por nossa equipe de especialistas para <strong>acelerar seus resultados</strong> e tornar sua dieta mais fácil de seguir.
-          </p>
-          <ul class="mt-4 space-y-2 text-slate-700">
-            <li>✅ Café da manhã energizante</li>
-            <li>✅ Almoços e jantares equilibrados</li>
-            <li>✅ Lanches rápidos e saudáveis</li>
-            <li>✅ Sobremesas fit irresistíveis</li>
-          </ul>
-        </div>
-      </div>
-
-      <aside class="p-6 rounded-2xl bg-white border border-slate-200 shadow-soft">
+  <!-- BLOCO FULL-WIDTH DE OFERTA -->
+  <section class="bg-white border-t border-b border-slate-200 py-10">
+    <div class="max-w-5xl mx-auto px-4 text-center">
+      <div class="max-w-2xl mx-auto">
         <div class="text-sm text-slate-500">Oferta Limitada</div>
 
         <!-- PREÇO COM DESTAQUE -->
-        <h3 class="text-3xl font-extrabold mt-1 text-emerald-600">
-          De <span class="text-red-500 line-through">R$ 149,90</span> por apenas <span class="text-emerald-600 text-4xl">R$ 9,90!</span>
+        <h3 class="text-4xl font-extrabold mt-2 text-emerald-600">
+          De <span class="text-red-500 line-through">R$ 149,90</span> por apenas <span class="text-emerald-600 text-5xl">R$ 9,90!</span>
         </h3>
 
-        <p class="mt-3 text-slate-700">
-          Essa é uma oferta única — disponível apenas nesta página.  
+        <p class="mt-4 text-slate-700 text-lg">
+          Essa é uma oportunidade única — disponível apenas nesta página.  
           Se sair dela, o desconto será encerrado!
         </p>
 
-        <div class="mt-4 p-4 bg-amber-50 border border-amber-200 rounded-xl text-amber-900">
+        <div class="mt-5 p-4 bg-amber-50 border border-amber-200 rounded-xl text-amber-900 text-base">
           <strong>⚠️ Atenção:</strong> essa condição especial aparece <u>somente uma vez</u>.  
           Aproveite enquanto o cronômetro estiver ativo!
         </div>
 
-        <!-- Botão principal -->
-        <a id="btnPagamento" href="/pagamento/?produto=receitas200&valor=9.90"
-           class="mt-6 block text-center rounded-xl px-5 py-3 bg-[var(--brand)] text-white font-semibold text-lg hover:bg-emerald-600 transition">
-           Quero minhas 200 receitas por R$ 9,90 ➜
-        </a>
+        <!-- Botões -->
+        <div class="mt-8 flex flex-col sm:flex-row justify-center gap-4">
+          <a id="btnPagamento" href="/pagamento/?produto=receitas200&valor=9.90"
+             class="flex-1 text-center rounded-xl px-5 py-4 bg-[var(--brand)] text-white font-bold text-xl hover:bg-emerald-600 transition">
+             Quero minhas 200 receitas por R$ 9,90 ➜
+          </a>
 
-        <!-- Botão secundário -->
-        <a href="https://dietapronta.online/approved"
-           class="mt-3 block text-center rounded-xl px-5 py-3 bg-red-500 text-white font-semibold text-lg hover:bg-red-600 transition">
-           Vou ficar somente com a dieta ✖
-        </a>
+          <a href="https://dietapronta.online/approved"
+             class="flex-1 text-center rounded-xl px-5 py-4 bg-red-500 text-white font-bold text-xl hover:bg-red-600 transition">
+             Vou ficar somente com a dieta ✖
+          </a>
+        </div>
 
-        <div class="mt-4 text-xs text-slate-500 text-center">
+        <div class="mt-5 text-xs text-slate-500 text-center">
           Acesso imediato • Conteúdo digital • Garantia de satisfação
         </div>
-      </aside>
+      </div>
     </div>
+  </section>
 
-    <!-- Prova social -->
-    <div class="container mx-auto mt-16 px-4 text-center">
-      <p class="text-sm uppercase text-amber-600 font-semibold tracking-wide">Mais de 12.000 pessoas já aproveitaram</p>
-      <h4 class="text-2xl font-extrabold mt-2">Resultados reais, receitas reais 💚</h4>
-      <p class="mt-2 text-slate-600 max-w-2xl mx-auto">
-        Esse pacote foi criado com base no feedback dos nossos pacientes — pessoas comuns que conquistaram resultados incríveis sem abrir mão do prazer de comer bem.
-      </p>
+  <!-- BLOCO DE INFORMAÇÕES E IMAGEM -->
+  <section id="oferta" class="py-14">
+    <div class="container mx-auto px-4 grid lg:grid-cols-2 gap-10 items-center">
+      <div class="rounded-2xl overflow-hidden shadow-soft border border-slate-200 bg-white">
+        <img id="upsellImage" src="https://dietapronta.online/images/receitas.jpg"
+             alt="Receitas saudáveis" class="w-full h-80 object-cover"
+             onerror="this.src='https://images.unsplash.com/photo-1512058564366-18510be2db19?q=80&w=1200&auto=format&fit=crop';"/>
+      </div>
+
+      <div>
+        <h2 class="text-3xl font-extrabold mb-3 text-emerald-600">O que você vai receber 🍽️</h2>
+        <ul class="space-y-3 text-slate-700 text-lg">
+          <li>✅ <strong>200 receitas exclusivas</strong> criadas por nutricionistas.</li>
+          <li>✅ <strong>Café da manhã, almoço, janta e lanches</strong> práticos.</li>
+          <li>✅ <strong>Sobremesas fit</strong> deliciosas sem sair da dieta.</li>
+          <li>✅ <strong>PDF completo e fácil de acessar</strong> no seu celular ou computador.</li>
+          <li>✅ Resultados reais para te manter motivado todos os dias!</li>
+        </ul>
+      </div>
     </div>
   </section>
 
@@ -162,7 +158,6 @@
   <script>
   document.addEventListener("DOMContentLoaded", function(){
     function $(id){ return document.getElementById(id); }
-
     $('year').textContent = (new Date()).getFullYear();
 
     // Countdown
@@ -170,7 +165,6 @@
     const countdownEl = $('countdown');
     const countdownBox = $('countdownBox');
     const btnPagamento = $('btnPagamento');
-
     const timer = setInterval(() => {
       const min = String(Math.floor(timeLeft / 60)).padStart(2, '0');
       const sec = String(timeLeft % 60).padStart(2, '0');
@@ -187,7 +181,7 @@
       timeLeft--;
     }, 1000);
 
-    // Pessoas comprando (dinâmico)
+    // Pessoas comprando
     const buyersEl = $('buyersNumber');
     let buyers = 24 + Math.floor(Math.random() * 8);
     buyersEl.textContent = buyers;
